of GenQuery processing code.

----------
*Partial implementation of GenUpdate functionality, this will require additional work in IRODS2.3 before it is usable.

----------
*fix for Bug 79 -  fix resource validation in IRODSFile.setResource to not use file-based query

----------
* Work in progress to add easier/enhanced query using iquest syntax and returning a resultset object.  This is based on work 
in jargon-core, and should be treated as early access.  As the implementation moves forward in jargon-core, the genquery facilities
in the classic Jargon API will get a port of the new facility.

-----------
*added support and began adding unit tests using mock objects

-----------
Refactoring

*factoring classic GenQuery processing from IRODSCommands
*add IRODSServerProperties object that describes the connected-to server
*new irodsFunction() methods to prepare for factoring out packing instructions into individual implementation classes.
*other code cleanup activities

-----------
*Bug 94  - add mkdirs() to create intermediate files - added mkdirs() capability to IRODSfile

-----------
*Bug 103  - add mod avu capability

------------
*Bug 104  - long value in MetaDataRecordList 

------------
*Bug 109 - NullPointerException possible from logging statement in IRODSMetaDataSet.java

================================================================================================
Outstanding Issues

Please consult https://www.irods.org/bugzilla/buglist.cgi?query_format=specific&order=relevance+desc&bug_status=__open__&product=&content=jargon

for the latest open bugs and Jargon feature requests

================================================================================================
Documentation and Installation

-See the README.txt in this distribution
-Review Jargon documentation at: http://www.irods.org/index.php/Jargon
-Review information at the IRODS web site: http://www.irods.org